[project]
name = "renting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "torch==2.2.0",
    "torchvision==0.17.0",
    "torch_geometric==2.4.0",
    "torch-scatter==2.1.2",
    "torch-tb-profiler==0.4.3",
    "tensordict==0.3.0",
    "plotly==5.19.0",
    "scikit-learn==1.4.0",
    "kaleido==0.2.1",
    "gymnasium==0.28.1",
    "pettingzoo==1.24.3",
    "supersuit==3.9.2",
    "tyro==0.7.2",
    "pandas==2.2.0",
		"rfc3986",
]

[project.optional-dependencies]
test = [
    "pytest",
]
genius = [
    "geniuswebcore @ https://tracinsy.ewi.tudelft.nl/pubtrac/GeniusWebPython/export/100/geniuswebcore/dist/geniusweb-1.2.1.tar.gz",
]
negmas = [
	"negmas",
	# "negmas @ file:///${PROJECT_ROOT}/../negmas"
]

[tool.uv]
find-links = [
    "https://data.pyg.org/whl/torch-2.2.0+cu121.html",
]
